cmake: Improve module encapsulation
NOTE: By saying module I mean net, util and rpc. For the
build system muparser is also treated as a module.

Before this commit some parts of a modules (net, util, rpc)
configuration would leak into the executable target's
configuration, because some things could only be state
there.
In addition to that we would compile modules by just adding
their source files to the executable target's source files.
This had the additional drawback, that we had to build each
of the module's sources once for each executable target
(which adds about 8 source files  per executable at the
moment).

In oder to tackle this problem, this commit introduces two
changes:

1) We are now compiling each module into a static library.
That library is then linked into the actual executable.

2) Each module now provides a config_<NAME> function.
Calling this function with a target must be the sole action
required to add a module to an executable target.
These functions add their associated library to the target,
they might add external libraries (e.g. protobuf, asio) to
the target, the might add additional file creation targets
or add additional include directories.
Since they are functions, called from within the executable
target's scope, they are almost as powerful as writing code
in the file itself – with the exception of code that must be
executed before the target is created (e.g.
link_directories())

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -292,33 +292,26 @@ function(opt_subdir subdir initial)
   endif()
 endfunction()
 
-add_subdirectory(libraries) # muparser
-declare_module(shared ./shared)
-declare_module(engine ./engine)
-declare_module(fpsgame ./fpsgame)
-declare_module(util ./util)
-add_subdirectory(rpc) # rpc module, protobuf lib
-add_subdirectory(net) # net module, asio lib
-
 include_directories(
     ${ENET_INCLUDE_DIRS}
     ${SDL2_INCLUDE_DIRS}
-    ${MUPARSER_INCLUDE_DIRS}
-    ${ASIO_INCLUDE_DIRS}
-    ${PROTOBUF_INCLUDE_DIRS}
-    ${RPC_INCLUDE_DIRS}
     ${FREETYPE_INCLUDE_DIRS}
     ${SOURCE_DIR}
     ${SOURCE_DIR}/shared
     ${SOURCE_DIR}/engine
     ${SOURCE_DIR}/fpsgame)
 
-# This should contain all sources that are used by all
-# targets. This only excludes fpsgame/ and engine/
-# TODO: Append every time we glob for sources
-set(COMMON_SOURCES ${MUPARSER_SOURCES} ${SHARED_MODULE_SOURCES}
-  ${UTIL_MODULE_SOURCES} ${NET_MODULE_SOURCES}
-  ${RPC_MODULE_SOURCES} CACHE INTERNAL "")
+add_subdirectory(libraries) # muparser
+declare_module(shared ./shared)
+declare_module(engine ./engine)
+declare_module(fpsgame ./fpsgame)
+add_subdirectory(util)
+add_subdirectory(net) # net module, asio lib
+add_subdirectory(rpc) # rpc module, protobuf lib
+
+# *sigh* We can't make shared a real module. Yet.
+# It's too interdependant
+set(COMMON_SOURCES ${SHARED_MODULE_SOURCES} CACHE INTERNAL "")
 
 # This contains the libraries that are used by all targets.
 # Excludes OpenGL and SDL, because those are only used by
@@ -326,7 +319,6 @@ set(COMMON_SOURCES ${MUPARSER_SOURCES} ${SHARED_MODULE_SOURCES}
 set(COMMON_LIBS
   ${ENET_LIBRARIES}
   ${ZLIB_LIBRARIES}
-  ${PROTOBUF_LIBRARIES}
   ${ADDITIONAL_LIBRARIES} CACHE INTERNAL "")
 
 # Actual targets
