--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -50,32 +50,23 @@ prepend(CLIENT_SOURCES_FPSGAME ${SOURCE_DIR}/fpsgame
     waypoint.cpp
     weapon.cpp)
 
-set(CLIENT_SOURCES ${CLIENT_SOURCES_ENGINE}
-  ${CLIENT_SOURCES_FPSGAME} ${COMMON_SOURCES}
-  CACHE INTERNAL "")
+set(CLIENT_SOURCES
+  ${CLIENT_SOURCES_ENGINE}
+  ${CLIENT_SOURCES_FPSGAME}
+  ${COMMON_SOURCES} CACHE INTERNAL "")
 
 group_modules()
 
 # Set Binary name
 set(CLIENT_BINARY inexor CACHE INTERNAL "Client binary name.")
 
-# Set Client definition
 add_definitions(-DCLIENT)
 
-# Linux Libraries and Configuration
 if(OS_LINUX)
     set(ADDITIONAL_LIBRARIES ${ADDITIONAL_LIBRARIES} dl rt)
-endif()
-
-# MACOSX Libraries and Configuration
-if(OS_MACOSX)
-    set(CLIENT_SOURCES
-        ${CLIENT_SOURCES}
-        engine/macutils.mm)
-endif()
-
-# Windows Libraries and Configuration
-if(OS_WINDOWS)
+elseif(OS_MACOSX)
+  set(CLIENT_SOURCES ${CLIENT_SOURCES} engine/macutils.mm)
+elseif(OS_WINDOWS)
     set(ADDITIONAL_LIBRARIES ${ADDITIONAL_LIBRARIES} opengl32)
 
     if(MSVC)
@@ -86,11 +77,11 @@ if(OS_WINDOWS)
 endif()
 
 add_app(${CLIENT_BINARY} ${CLIENT_SOURCES})
-
-set(CLIENT_LIBS ${COMMON_LIBS} ${SDL2_LIBRARIES}
-  ${OPENGL_LIBRARIES} ${ADDITIONAL_LIBRARIES} CACHE INTERNAL "")
-
-target_link_libraries_wrapper(${CLIENT_BINARY} ${CLIENT_LIBS})
+target_link_libraries_wrapper(${CLIENT_BINARY}
+  ${COMMON_LIBS}
+  ${SDL2_LIBRARIES}
+  ${OPENGL_LIBRARIES}
+  ${ADDITIONAL_LIBRARIES})
 
 config_net(${CLIENT_BINARY})
 config_rpc(${CLIENT_BINARY})
