Add a cmake config for testing with googletest
This adds the google test sources as a submodule and some
configuration to build them as a module.

To build the test we add a new executable target 'testcmd'
in src/test/ that compiles the source files under src/test/.

We also add a run_tests target that just executes testcmd.

--- a/src/libraries/CMakeLists.txt
+++ b/src/libraries/CMakeLists.txt
@@ -1,3 +1,4 @@
+include(ExternalProject)
 set(pwd "${CMAKE_CURRENT_SOURCE_DIR}")
 
 #### MUPARSER
@@ -23,4 +24,37 @@ function(config_muparser targ)
 
   include_directories(${MUPARSER_INCLUDE_DIRS})
   target_link_libraries_wrapper(${targ} inexor_muparser)
+endfunction()
+
+#### Googletest
+
+set(GTEST_DIR "${pwd}/googletest" CACHE INTERNAL "")
+set(GTEST_INCLUDE_DIRS "${GTEST_DIR}/include"
+  CACHE INTERNAL "")
+
+set(gtest_args
+      -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
+      -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
+      -Dgtest_disable_pthreads=true)
+if (CMAKE_TOOLCHAIN_FILE)
+  list(APPEND gtest_args
+    -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE})
+endif()
+
+ExternalProject_Add(build_gtest
+  SOURCE_DIR "${GTEST_DIR}"
+  INSTALL_COMMAND ""
+  CMAKE_ARGS ${gtest_args})
+
+# This is a it of a hack to find the actual location of the
+# built library
+ExternalProject_Get_Property(build_gtest BINARY_DIR)
+set(GTEST_LIB_DIR ${BINARY_DIR} CACHE INTERN "")
+
+function(config_gtest targ)
+  message(STATUS "Configuring ${targ} with google test")
+
+  add_dependencies(${targ} build_gtest)
+  include_directories(${GTEST_INCLUDE_DIRS})
+  target_link_libraries_wrapper(${targ} gtest)
 endfunction()
