--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = src/libraries/muparser
 	url = https://github.com/inexor-game/muparser.git
 	branch = master
+[submodule "src/libraries/googletest"]
+	path = src/libraries/googletest
+	url = https://github.com/inexor-game/googletest.git
