--- a/src/rpc/CMakeLists.txt
+++ b/src/rpc/CMakeLists.txt
@@ -25,7 +25,7 @@ add_custom_command(
       --cpp_out=${CMAKE_BINARY_DIR}/src ${protoc_in}
   DEPENDS ${protoc_in})
 set_source_files_properties(${protoc_out} PROPERTIES GENERATED TRUE)
-add_custom_target(inexor_protoc DEPENDS ${protoc_out})
+add_custom_target(run_protoc DEPENDS ${protoc_out})
 
 set(RPC_INCLUDE_DIRS "${CMAKE_BINARY_DIR}/src/" CACHE INTERNAL "")
 
@@ -41,17 +41,17 @@ declare_module(rpc .)
 set(RPC_MODULE_SOURCES ${RPC_MODULE_SOURCES} ${protoc_out_cc}
   CACHE INTERNAL "")
 
-add_library(inexor_rpc STATIC ${RPC_MODULE_SOURCES})
-config_net(inexor_rpc NOLINK)
+add_lib(rpc)
+config_net(module_rpc NOLINK)
 
 function(config_rpc targ)
   message(STATUS "Configuring ${targ} with rpc")
 
   add_definitions(-DGOOGLE_PROTOBUF_NO_RTTI)
-  add_dependencies(${targ} inexor_protoc)
+  add_dependencies(${targ} run_protoc)
   include_directories(${PROTOBUF_INCLUDE_DIRS} ${RPC_INCLUDE_DIRS})
-  target_link_libraries_wrapper(${targ} inexor_rpc
-    inexor_net ${PROTOBUF_LIBRARIES})
+  target_link_libs(${targ}
+    module_rpc module_net ${PROTOBUF_LIBRARIES})
   config_net(${targ})
 endfunction()
 
