cmake: call group_modules inside add_app.
You wont need to call it for each target anymore now.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -152,8 +152,9 @@ endfunction()
 
 # USAGE: group_modules()
 #
-# Set up Source_groups for VS/XCode
-# Has to be called for every target
+# Set up Source_groups for VS/XCode.
+# Does not need to be called normally, except you are not
+# using add_app
 #
 function(group_modules)
   foreach(mod ${ALL_MODULES})
@@ -267,6 +268,8 @@ endfunction()
 # see: add_executable
 function(add_app exe )
   message(STATUS "Adding Application: ${exe}")
+
+  group_modules()
 
   set(sources ${ARGN})
 
