Fix debug options not being used
Debug mode is default, but the debug mode compiler options
were not used. This works around this problem by defaulting
CMAKE_BUILD_TYPE manually as a cached variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CONFIGURATION_TYPES Debug Release)
 
 # First choice is Debug
 if(NOT DEFINED CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Debug)
+  set(CMAKE_BUILD_TYPE Debug CACHE INTERN "")
 endif()
 
 # Set a default toolchain file
