node: Add basic wrappers to get data about players

--- a/node/package.json
+++ b/node/package.json
@@ -6,7 +6,8 @@
     "protobufjs":    "*",
     "uuid":          "*",
     "long":          "*",
-    "lodash":        "*"
+    "lodash":        "*",
+    "async":         "*"
   },
   "engines": {
     "node": ">=0.10.0"
