travis: Move nightly build script to travis.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ script:
   - bash tool/travis.sh target_script
 
 after_success:
-  - bash ./tool/nightly-build.sh
+  - bash tool/travis.sh target_after_success
