cmake: fix ldFlags typo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,7 +275,7 @@ if(NOT MSVC)
     if(USE_ENVFLAGS)
         set(I_C_COMPILER_FLAGS      "${I_C_COMPILER_FLAGS} $ENV{CFLAGS}")
         set(I_CXX_COMPILER_FLAGS    "${I_CXX_COMPILER_FLAGS} $ENV{CXXFLAGS}")
-        set(I_LINKER_FLAGS          "${I_LINKER_FLAGS} $ENV{LDLAGS}")
+        set(I_LINKER_FLAGS          "${I_LINKER_FLAGS} $ENV{LDFLAGS}")
     endif()
 endif()
 
