Make RPC a Subsystem
We also disable RPC for the server since it is not very
mature yet and not really useful on the server (yet)

--- a/src/rpc/CMakeLists.txt
+++ b/src/rpc/CMakeLists.txt
@@ -51,7 +51,7 @@ function(config_rpc targ)
   add_dependencies(${targ} run_protoc)
   include_directories(${PROTOBUF_INCLUDE_DIRS} ${RPC_INCLUDE_DIRS})
   target_link_libs(${targ}
-    module_rpc module_net ${PROTOBUF_LIBRARIES})
+    module_rpc module_net ${PROTOBUF_LIBRARIES} module_util)
   config_net(${targ})
 endfunction()
 
