--- a/node/package.json
+++ b/node/package.json
@@ -1,13 +1,20 @@
 {
   "name": "Inexor_IPC_Client",
+  "description": "Scripting in node.js for inexor",
+  "repository": "git@github.com:inexor-game/code.git",
   "version": "0.0.1",
   "dependencies": {
-    "coffee-script": ">=1.6.2",
-    "protobufjs":    "*",
-    "uuid":          "*",
-    "long":          "*",
-    "lodash":        "*",
-    "async":         "*"
+    "async": "^0.9.0",
+    "coffee-script": "^1.9.2",
+    "connect-assets": "^4.7.0",
+    "express": "^4.12.3",
+    "jade": "^1.9.2",
+    "lodash": "^3.8.0",
+    "long": "^2.2.3",
+    "protobufjs": "^4.0.0-b2",
+    "serve-static": "^1.9.2",
+    "stylus": "^0.51.1",
+    "uuid": "^2.0.1"
   },
   "engines": {
     "node": ">=0.10.0"
