--- a/node/package.json
+++ b/node/package.json
@@ -5,6 +5,8 @@
   "version": "0.0.1",
   "dependencies": {
     "async": "^0.9.0",
+    "bootstrap-styl": "^4.0.4",
+    "bootstrap-stylus": "^0.2.2",
     "coffee-script": "^1.9.2",
     "connect-assets": "^4.7.0",
     "express": "^4.12.3",
