Use AMD with node_modules
We now use AMD to dynamically load code in CEF, including
node.js libs.

--- a/node/package.json
+++ b/node/package.json
@@ -10,6 +10,9 @@
     "coffee-script": "^1.9.2",
     "connect-assets": "^4.7.0",
     "express": "^4.12.3",
+    "browserify": "^10.2.0",
+    "requirejs": "^2.1.17",
+    "requirejs-browser": "^2.1.9",
     "jade": "^1.9.2",
     "lodash": "^3.8.0",
     "long": "^2.2.3",
