Add an api to list the assets on the HTTP server

--- a/node/package.json
+++ b/node/package.json
@@ -13,6 +13,7 @@
     "browserify": "^10.2.0",
     "requirejs": "^2.1.17",
     "requirejs-browser": "^2.1.9",
+    "amdefine": "^0.1.0",
     "jade": "^1.9.2",
     "jquery": "^2.1.4",
     "lodash": "^3.8.0",
@@ -21,7 +22,8 @@
     "serve-static": "^1.9.2",
     "stylus": "^0.51.1",
     "underscore.string": "^3.0.3",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "node-dir": "^0.1.8"
   },
   "engines": {
     "node": ">=0.10.0"
